# netease_rust_music

./: Cargo.toml  LICENSE  build.rs
src/: content.rs  header.rs  main.rs  mainwindow.rs
ui/: resources.qrc
